fix alignments

--- a/assets/css/swipetounlock.scss
+++ b/assets/css/swipetounlock.scss
@@ -71,6 +71,7 @@ h6 {
   max-width: 564px;
   text-align: center;
   color: $stu_white;
+  background-position: top center;
 }
 
 #card-bigdata {
